--- a/nextflow.config
+++ b/nextflow.config
@@ -4,10 +4,51 @@ profiles {
     process.conda = true
     conda.useMamba = false
     conda.channels = ['conda-forge', 'bioconda', 'defaults']
+    process.executor = 'local'
+    process.cpus = 1
+    process.memory = '4 GB'
+  }
+  
+  pbs {
+    conda.enabled = true
+    process.conda = true
+    conda.useMamba = false
+    conda.channels = ['conda-forge', 'bioconda', 'defaults']
+    process.executor = 'pbs'
+    process.queue = 'short'
+    process.cpus = 1
+    process.memory = '4 GB'
+    process.time = '1h'
+    process.clusterOptions = '-A lp_symbiosys'
+  }
+  
+  local {
+    conda.enabled = true
+    process.conda = true
+    conda.useMamba = false
+    conda.channels = ['conda-forge', 'bioconda', 'defaults']
+    process.executor = 'local'
+    process.cpus = 1
+    process.memory = '4 GB'
   }
 }
 
-process.executor = 'local'
-process.cpus = 1
-process.memory = '4 GB'
+// Process-specific resource requirements
+process {
+  withName: ANALYZE_PRIMER_ALIGNMENTS {
+    memory = '8 GB'
+    time = '30m'
+  }
+  
+  withName: QC_COVERAGE {
+    memory = '6 GB'
+    time = '20m'
+  }
+  
+  withName: EXTRACT_CDNA_PRIMERS {
+    memory = '4 GB'
+    time = '15m'
+  }
+}
+
 params.outdir = 'results'
