--- a/nextflow.config
+++ b/nextflow.config
@@ -1,25 +1,13 @@
-profiles {
-  conda {
-    conda.enabled = true
-    process.conda = true
-    conda.useMamba = false
-    conda.channels = ['conda-forge', 'bioconda', 'defaults']
-    process.executor = 'local'
-    process.cpus = 1
-    process.memory = '4 GB'
-  }
-  
+profiles { 
   pbs {
     conda.enabled = true
     process.conda = true
     conda.useMamba = false
     conda.channels = ['conda-forge', 'bioconda', 'defaults']
     process.executor = 'pbs'
-    process.queue = 'short'
     process.cpus = 1
     process.memory = '4 GB'
     process.time = '1h'
-    process.clusterOptions = '-A lp_symbiosys'
   }
   
   local {
@@ -40,9 +28,8 @@ process {
     time = '30m'
   }
   
-  withName: QC_COVERAGE {
-    memory = '6 GB'
-    time = '20m'
+  withName: PICK_PEAKS {
+    clusterOptions = '-l nodes=1:ppn=4 -l mem=64gb -l walltime=04:00:00'
   }
   
   withName: EXTRACT_CDNA_PRIMERS {
