--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,5 @@
+includeConfig "$projectDir/params.config"
+
 profiles { 
   pbs {
     conda.enabled = true
@@ -37,5 +39,6 @@ process {
     time = '15m'
   }
 }
+
 
 params.outdir = 'results'
