macs2 peak caller

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,8 +30,14 @@ process {
     time = '30m'
   }
   
-  withName: PICK_PEAKS {
-    clusterOptions = '-l nodes=1:ppn=4 -l mem=64gb -l walltime=04:00:00'
+  withName: MACS2_CALLPEAK {
+    memory = '8 GB'
+    time = '1h'
+  }
+  
+  withName: PROCESS_MACS2_PEAKS {
+    memory = '4 GB'
+    time = '30m'
   }
   
   withName: EXTRACT_CDNA_PRIMERS {
