--- a/params.config
+++ b/params.config
@@ -18,5 +18,18 @@ params {
   transcriptome_fasta = null        // transcriptome FASTA file for gene name mapping in alignment analysis
   max_primers_per_gene = 20          // maximum primers per gene for alignment QC
   primer3_settings    = 'config/primer3_settings.txt' // default settings
+  
+  // MACS2-specific parameters
+  macs2_pvalue_threshold = 0.05     // p-value threshold for peak significance
+  macs2_min_peak_score = 0          // minimum peak score threshold
+  
   outdir              = 'results'
+  makeplots = false //by default skip ploting coverage
+  
+  // Parameters for makeplots workflow (when using --makeplots)
+  bw                  = null        // BigWig file for plotting (required for --makeplots)
+  peaks_tsv           = null        // peaks.tsv file (required for --makeplots)
+  primer              = null        // primer targets BED file (optional for --makeplots, also accepts --primer_targets_bed)
+  qc_tsv              = null        // QC summary file (optional for --makeplots)
+  narrowpeak          = 'NO_FILE'   // MACS2 narrowPeak file to show all peaks (use 'NO_FILE' to disable)
 }
