--- a/params.config
+++ b/params.config
@@ -22,6 +22,8 @@ params {
   // MACS2-specific parameters
   macs2_pvalue_threshold = 0.05     // p-value threshold for peak significance
   macs2_min_peak_score = 0          // minimum peak score threshold
+  peak_selection_metric = 'score'   // metric for selecting best peak per gene: 'score' or 'qvalue'
+  peak_rank = 1                     // which ranked peak to select per gene: 1 for best, 2 for second-best, etc.
   
   outdir              = 'results'
   makeplots = false //by default skip ploting coverage
