--- a/params.config
+++ b/params.config
@@ -4,24 +4,27 @@ params {
   genes               = null        // text file: one Ensembl gene ID per line
   genome_package      = 'BSgenome.Hsapiens.UCSC.hg38' // choose the genome that matches the bam file, Bioconductor genome
   fasta               = null        // optional: genome FASTA file (alternative to BSgenome)
-  pad                 = 60          // ±bp around peak
-  smooth_k            = 31          // smoothing window (odd integer)
-  sliding_window      = false       // enable sliding-window selection when QC fails
+
   min_window_mean     = null        // minimum required mean coverage across window (absolute value)
   min_window_mean_pct = null        // minimum window mean as % of gene peak coverage (overrides min_window_mean)
   max_gap             = null        // maximum allowed longest zero-coverage run (null to disable)
   search_slop         = 1000        // extra bases for BigWig import per chromosome
   trim_to_exon        = false       // trim final window to the exon containing the peak
-  trim_low_coverage_pct = null     // trim window ends with coverage below X% of window peak (0-100)
   min_exonic_fraction = null        // minimum required exonic fraction of window (0-1)
   transcriptome_index = null        // bowtie2 index prefix for human transcriptome (e.g., 'transcriptome_idx')
   transcriptome_fasta = null        // transcriptome FASTA file for gene name mapping in alignment analysis
   max_primers_per_gene = 20          // maximum primers per gene for alignment QC
   primer3_settings    = 'config/primer3_settings.txt' // default settings
   
-  // MACS2-specific parameters
-  macs2_pvalue_threshold = 0.05     // p-value threshold for peak significance
+  // MACS2-specific parameters (current implementation)
+  // Note: This pipeline uses MACS2 for statistically rigorous peak calling
+  // Legacy derfinder-based parameters (pad, smooth_k, sliding_window, trim_low_coverage_pct) 
+  // are no longer used in the current MACS2-based workflow
+  macs2_qvalue_threshold = 0.05     // q-value (FDR) threshold for peak significance (controls both MACS2 calling and pipeline filtering)
+  macs2_pvalue_threshold = null     // DEPRECATED: Use macs2_qvalue_threshold instead (maintained for backward compatibility)
   macs2_min_peak_score = 0          // minimum peak score threshold
+  macs2_extsize = null              // fragment size for extending reads (--extsize, null for auto-detection)
+  macs2_shift = null                // shift for reads in bp (--shift, null for auto-detection)
   peak_selection_metric = 'score'   // metric for selecting best peak per gene: 'score' or 'qvalue'
   peak_rank = 1                     // which ranked peak to select per gene: 1 for best, 2 for second-best, etc.
   
