force exon trimming

--- a/params.config
+++ b/params.config
@@ -11,6 +11,10 @@ params {
   search_slop         = 1000        // extra bases for BigWig import per chromosome
   trim_to_exon        = false       // trim final window to the exon containing the peak
   min_exonic_fraction = null        // minimum required exonic fraction of window (0-1)
+  
+  // New parameters for forced exonic trimming
+  force_exonic_trimming = true      // force trimming to exon+UTR boundaries for primer safety
+  min_trimmed_length = 30          // minimum length of trimmed region for primer design (bp)
   transcriptome_index = null        // bowtie2 index prefix for human transcriptome (e.g., 'transcriptome_idx')
   transcriptome_fasta = null        // transcriptome FASTA file for gene name mapping in alignment analysis
   max_primers_per_gene = 20          // maximum primers per gene for alignment QC
