--- a/params.config
+++ b/params.config
@@ -30,7 +30,7 @@ params {
   macs2_extsize = null              // fragment size for extending reads (--extsize, null for auto-detection)
   macs2_shift = null                // shift for reads in bp (--shift, null for auto-detection)
   peak_selection_metric = 'score'   // metric for selecting best peak per gene: 'score' or 'qvalue'
-  peak_rank = 1                     // which ranked peak to select per gene: 1 for best, 2 for second-best, etc.
+  peak_rank = 1                     // which ranked peak to select per gene: any positive integer (1 for best, 2 for second-best, 3 for third-best, etc.)
   
   outdir              = 'results'
   makeplots = false //by default skip ploting coverage
