fix versions bugs and add distance_threshold

--- a/params.config
+++ b/params.config
@@ -20,6 +20,11 @@ params {
   max_primers_per_gene = 20          // maximum primers per gene for alignment QC
   primer3_settings    = 'config/primer3_settings.txt' // default settings
   
+  // Primer alignment filtering (3' RNA-seq specific)
+  distance_threshold = 400         // maximum distance from 3' end for alignments to be considered relevant (bp)
+                                    // For 3' RNA-seq protocols, only alignments near the transcript 3' end matter
+                                    // Increase to 2000-5000 for more permissive filtering
+  
   // MACS2-specific parameters (current implementation)
   // Note: This pipeline uses MACS2 for statistically rigorous peak calling
   // Legacy derfinder-based parameters (pad, smooth_k, sliding_window, trim_low_coverage_pct) 
