--- a/params.config
+++ b/params.config
@@ -1,9 +1,15 @@
 params {
+  // === Peak-based primer design mode (default) ===
   bam                 = null        // input RNA‑seq BAM (spliced alignments)
   gtf                 = null        // gene annotation (same build as BAM)
   genes               = null        // text file: one Ensembl gene ID per line
   genome_package      = 'BSgenome.Hsapiens.UCSC.hg38' // choose the genome that matches the bam file, Bioconductor genome
   fasta               = null        // optional: genome FASTA file (alternative to BSgenome)
+  
+  // === Distance-based primer design mode ===
+  distance_mode       = false       // enable distance-based 3' end primer design (alternative to peak-based mode)
+  template_length     = null        // number of bases to extract from 3' end for primer design (required for distance_mode)
+  transcript_fasta    = null        // optional: FASTA file with transcript sequences (alternative to fetching from Ensembl)
 
   min_window_mean     = null        // minimum required mean coverage across window (absolute value)
   min_window_mean_pct = null        // minimum window mean as % of gene peak coverage (overrides min_window_mean)
@@ -15,8 +21,10 @@ params {
   // New parameters for forced exonic trimming
   force_exonic_trimming = true      // force trimming to exon+UTR boundaries for primer safety
   min_trimmed_length = 30          // minimum length of trimmed region for primer design (bp)
+  
+  // === Primer specificity checking (both modes) ===
   transcriptome_index = null        // bowtie2 index prefix for human transcriptome (e.g., 'transcriptome_idx')
-  transcriptome_fasta = null        // transcriptome FASTA file for gene name mapping in alignment analysis
+  transcriptome_fasta = null        // transcriptome FASTA file for gene name mapping in alignment analysis (reused for distance mode)
   max_primers_per_gene = 20          // maximum primers per gene for alignment QC
   primer3_settings    = 'config/primer3_settings.txt' // default settings
   
