delete and consolidate docs and plot faster

--- a/nextflow.config
+++ b/nextflow.config
@@ -44,6 +44,14 @@ process {
     memory = '4 GB'
     time = '15m'
   }
+  
+  // Plotting optimization: enable parallel execution
+  withName: MAKEPLOTS_NEW {
+    maxForks = 4      // Run 4 plots simultaneously
+    cpus = 1
+    memory = '3 GB'   // Increased for BigWig caching
+    time = '15m'
+  }
 }
 
 
