multipeak opt fix bugs

--- a/params.config
+++ b/params.config
@@ -24,7 +24,7 @@ params {
   
   // === Primer specificity checking (both modes) ===
   transcriptome_index = null        // bowtie2 index prefix for human transcriptome (e.g., 'transcriptome_idx')
-  transcriptome_fasta = null        // transcriptome FASTA file for gene name mapping in alignment analysis (reused for distance mode)
+  transcript_mapping  = 'resources/transcript_gene_mapping.GRCh38.109.tsv' // transcript-to-gene mapping TSV for alignment analysis
   max_primers_per_gene = 20          // maximum primers per gene for alignment QC
   primer3_settings    = 'config/primer3_settings.txt' // default settings
   
@@ -44,6 +44,19 @@ params {
   macs2_shift = null                // shift for reads in bp (--shift, null for auto-detection)
   peak_selection_metric = 'score'   // metric for selecting best peak per gene: 'score' or 'qvalue'
   peak_rank = 1                     // which ranked peak to select per gene: 1 for best, 2 for second-best, etc.
+  
+  // === Multi-peak mode parameters ===
+  // Multi-peak mode parameters
+  select_all_peaks = false          // enable multi-peak mode: select ALL peaks per gene instead of single peak
+  max_peaks_per_gene = 0            // limit peaks per gene in multi-peak mode (0=unlimited)
+  
+  // Multi-peak optimization parameters
+  optimize_multipeak = false        // enable multi-peak primer optimization with distance-based scoring
+  primers_per_gene = 3              // number of primers to select per gene in multi-peak mode
+  distance_weight = 0.5             // weight for distance to 3' end in scoring (0-1)
+  isoform_weight = 0.3              // weight for isoform coverage in scoring (0-1)
+  peak_rank_weight = 0.2            // weight for peak rank in scoring (0-1)
+  max_peaks_per_gene = 0            // limit number of peaks per gene in multi-peak mode (0=unlimited)
   
   outdir              = 'results'
   makeplots = false //by default skip ploting coverage
