fix conda versions bugs

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,21 @@
 includeConfig "$projectDir/params.config"
+// Specify the work directory
+def scratch_dir =   System.getenv("VSC_SCRATCH_PROJECTS_BASE") ? "${System.getenv("VSC_SCRATCH_PROJECTS_BASE")}/$tier1_project" : // Tier 1 scratch
+                    System.getenv("VSC_SCRATCH_VO_USER") ?: // VO scratch
+                    System.getenv("VSC_SCRATCH") // user scratch
+ 
+// Specify the work directory
+workDir = "$scratch_dir/work"
 
 profiles { 
   pbs {
     conda.enabled = true
     process.conda = true
-    conda.useMamba = false
+    conda.useMamba = true  // Enable mamba for faster, more reliable env resolution
+    conda.createTimeout = '2h'  // Increased timeout for environment creation
     conda.channels = ['conda-forge', 'bioconda', 'defaults']
+    conda.channelPriority = 'strict'  // Required for conda 25.x compatibility
+    conda.createOptions = '--override-channels'  // Required for conda 25.x compatibility
     process.executor = 'pbs'
     process.cpus = 1
     process.memory = '4 GB'
@@ -15,8 +25,11 @@ profiles {
   local {
     conda.enabled = true
     process.conda = true
-    conda.useMamba = false
+    conda.useMamba = true  // Enable mamba for faster, more reliable env resolution
+    conda.createTimeout = '2h'  // Increased timeout for environment creation
     conda.channels = ['conda-forge', 'bioconda', 'defaults']
+    conda.channelPriority = 'strict'  // Required for conda 25.x compatibility
+    conda.createOptions = '--override-channels'  // Required for conda 25.x compatibility
     process.executor = 'local'
     process.cpus = 1
     process.memory = '4 GB'
@@ -53,6 +66,4 @@ process {
     time = '15m'
   }
 }
-
-
 params.outdir = 'results'
