--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ profiles {
   pbs {
     conda.enabled = true
     process.conda = true
-    conda.useMamba = true  // Enable mamba for faster, more reliable env resolution
+    conda.useMamba = false  // Use pure conda (mamba not available)
     conda.createTimeout = '2h'  // Increased timeout for environment creation
     conda.channels = ['conda-forge', 'bioconda', 'defaults']
     conda.channelPriority = 'strict'  // Required for conda 25.x compatibility
@@ -25,7 +25,7 @@ profiles {
   local {
     conda.enabled = true
     process.conda = true
-    conda.useMamba = true  // Enable mamba for faster, more reliable env resolution
+    conda.useMamba = false  // Use pure conda (mamba not available)
     conda.createTimeout = '2h'  // Increased timeout for environment creation
     conda.channels = ['conda-forge', 'bioconda', 'defaults']
     conda.channelPriority = 'strict'  // Required for conda 25.x compatibility
