bowtie command update

--- a/params.config
+++ b/params.config
@@ -28,10 +28,13 @@ params {
   max_primers_per_gene = 20          // maximum primers per gene for alignment QC
   primer3_settings    = 'config/primer3_settings.txt' // default settings
   
-  // Primer alignment filtering (3' RNA-seq specific)
-  distance_threshold = 400         // maximum distance from 3' end for alignments to be considered relevant (bp)
-                                    // For 3' RNA-seq protocols, only alignments near the transcript 3' end matter
-                                    // Increase to 2000-5000 for more permissive filtering
+  // Primer specificity filtering (alignment-based QC)
+  distance_threshold = 400          // maximum distance from 3' end for alignments (bp)
+                                    // For 3' RNA-seq, only alignments near transcript 3' end matter
+  max_mismatches = 3                // maximum mismatches for primer specificity check (0-3)
+                                    // Primers aligning to off-targets with ≤3 mismatches are flagged as non-specific
+  bowtie2_seed_length = 12          // Bowtie2 seed length for alignment sensitivity (4-31)
+                                    // 10bp = optimal for ~20nt primers to detect 1-3 mismatch alignments but very slow
   
   // MACS2-specific parameters (current implementation)
   // Note: This pipeline uses MACS2 for statistically rigorous peak calling
