--- a/env/macs2_env.yml
+++ b/env/macs2_env.yml
@@ -4,11 +4,10 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.9.*
+  - python=3.9*
   - numpy=1.23.2
-  - scipy=1.10.1
-  - macs2=2.2.9.1
-  - homer
+  - scipy=1.7.3
+  - macs2=2.2.7.1
   # Additional dependencies that MACS2 needs
   # These will be automatically resolved but good to document
   # - cython
